# meal_planner

./: .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  build_zip.sh  planner.py  s3_util.py  ses_util.py  trello.py  trello_util.py
common/: Cargo.toml
common/src/: lib.rs
infrastructure/: Pulumi.dev.yaml  Pulumi.yaml  config.ts  index.ts  package-lock.json  placeholder.sh  recommender.ts  responder.ts
meal-planner-recommender/: Cargo.toml  deploy.sh
meal-planner-recommender/src/: env.rs  ses.rs  ses_util.rs
meal-planner-recommender/src/templates/: README.md  email.tera
meal-planner-responder/: Cargo.toml  deploy.sh
meal-planner-responder/src/: main.rs  todoist.rs  util.rs
meal_planner_recommender/: Cargo.toml  README.md
meal_planner_recommender/src/: email_context.rs  main.rs  s3.rs  util.rs
meal_planner_responder/: Cargo.toml  README.md
meal_planner_responder/request_examples/: basic.json
meals/: README.md
meals/Dinner/: Coconut Curry Lentils and Curry Roasted Carrots.cook  Creamy Fajita Pasta.cook  Italian Sausage and White Bean Skillet.cook  Veggie Chili.cook
meals/config/: aisle.conf
test/: test_ses_util.py  test_trello_util.py
