[package]
name = "meal_planner_recommender"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
common = "*"

anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-ses = { workspace = true }
aws_lambda_events = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
tera = { workspace = true }
