[package]
name = "meal_planner_responder"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
common = "*"

anyhow = { workspace = true }
cooklang = { workspace = true }
include_dir = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
reqwest = { workspace = true }
openssl = { version = "0.10.35", features = ["vendored"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
